# spec-kit-zh

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  Makefile  OPTIMIZATION_TODO.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TERMINOLOGY.md  pyproject.toml  spec-driven.md
.devcontainer/: post-create.sh
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  docs.yml  link-check.yml  update-star-history.yml  upstream-sync.yml
.github/workflows/scripts/: create-github-release.sh  create-release-packages.ps1  create-release-packages.sh
docs/: .gitignore  README.md  antd-pagination-convention.md  antd-searchbar-layout-convention.md  axios-response-convention.md  china-network.md  conventions.yml  db-and-mapper-convention.md  docfx.json  domestic-llm.md  ecp-platform-convention.md  index.md  installation.md  local-development.md  migration.md  quickstart.md  spec-kit-engineering-logic-zh.md  spring-value-empty-troubleshooting.md  toc.yml  troubleshooting.md  upgrade.md  upstream-sync.md
extensions/: EXTENSION-API-REFERENCE.md  EXTENSION-DEVELOPMENT-GUIDE.md  EXTENSION-PUBLISHING-GUIDE.md  EXTENSION-USER-GUIDE.md  README.md  RFC-EXTENSION-SYSTEM.md
extensions/template/: .gitignore  CHANGELOG.md  EXAMPLE-README.md  README.md  config-template.yml  extension.yml
extensions/template/commands/: example.md
scripts/: codex-commit.sh  codex-dev.sh  codex-safe.sh
scripts/bash/: check-prerequisites.sh  common.sh  create-new-feature.sh  setup-plan.sh  update-agent-context.sh
scripts/powershell/: check-prerequisites.ps1  common.ps1  create-new-feature.ps1  setup-plan.ps1  update-agent-context.ps1
src/specify_cli/: __init__.py  codex_prompts.py  constants.py  extensions.py
templates/: agent-file-template.md  checklist-template.md  constitution-template.md  plan-template.md  spec-template.md  tasks-template.md
templates/commands/: analyze.md  checklist.md  clarify.md  constitution.md  implement.md  plan.md  specify.md  tasks.md  taskstoissues.md
tests/: __init__.py  test_agent_config_consistency.py  test_ai_skills.py  test_cli_output.py  test_codex_prompts.py  test_cursor_frontmatter.py  test_docs_integrity.py  test_doctor.py  test_extensions.py  test_init_fallback_assets.py  test_maintenance_workflows.py  test_smoke.py
tests/hooks/: TESTING.md  plan.md  spec.md  tasks.md
tests/hooks/.specify/: extensions.yml
