[project]
name = "specify-cli-zh"
version = "0.8.4"
description = "Specify CLI，GitHub Spec Kit 的命令行工具，用于为 Spec-Driven Development (SDD) 初始化项目。"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "click>=8.1",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
    "pyyaml>=6.0",
    "packaging>=23.0",
]

[project.scripts]
specify-zh = "specify_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]

[tool.hatch.build.targets.wheel.force-include]
"docs/conventions.yml" = "specify_cli/_bundled_docs/conventions.yml"
"docs/axios-response-convention.md" = "specify_cli/_bundled_docs/axios-response-convention.md"
#"docs/db-and-mapper-convention.md" = "specify_cli/_bundled_docs/db-and-mapper-convention.md"
"docs/ecp-platform-convention.md" = "specify_cli/_bundled_docs/ecp-platform-convention.md"
"docs/antd-searchbar-layout-convention.md" = "specify_cli/_bundled_docs/antd-searchbar-layout-convention.md"
"docs/antd-pagination-convention.md" = "specify_cli/_bundled_docs/antd-pagination-convention.md"
"templates" = "specify_cli/_bundled_core/templates"
"scripts" = "specify_cli/_bundled_core/scripts"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
